fix: align radio btns

--- a/src/_sass/overrides/_forms.scss
+++ b/src/_sass/overrides/_forms.scss
@@ -68,11 +68,11 @@
         .hs-form-radio-display {
           display: flex;
           align-items: center;
+          margin-bottom: 2px;
           .hs-input {
             width: calc(24rem / 16);
             height: calc(24rem / 16);
             border-radius: 50%;
-            margin-top: 0.25em;
             background-color: #fff;
             background-repeat: no-repeat;
             background-position: center;
